# claude-code-history-viewer

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: updater-release.yml
.serena/memories/: issue-77-codex-opencode-support.md  refactoring-roadmap-2026-02.md
docs/: BRUSHING_SPEC.md  SEMANTICS.md  SETTINGS_MANAGER_PLAN.md  USER_GUIDE.md
docs/specs/: issue-83-native-rename.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs  utils.rs
src-tauri/src/commands/: claude_settings.rs  mcp_presets.rs  metadata.rs  mod.rs  project.rs  session.rs  settings.rs  stats.rs  unified_presets.rs  update.rs
src-tauri/src/commands/session/: load.rs  mod.rs  rename.rs
src-tauri/src/models/: claude_settings.rs  metadata.rs  session.rs  snapshot_tests.rs  stats.rs
src-tauri/tests/: configImport.test.ts  tauriConfig.test.ts
src/components/: AdvancedTextDiff.tsx  AnalyticsDashboard.tsx  CollapsibleToolResult.tsx  ErrorBoundary.tsx  FileContent.tsx  MessageViewer.tsx  NativeRenameDialog.tsx  ProjectTree.tsx  RecentEditsViewer.tsx  SessionItem.tsx  SimpleUpdateManager.tsx  SimpleUpdateModal.tsx  SimpleUpdateSettings.tsx  SmartJsonDisplay.tsx  TokenStatsViewer.tsx  ToolIcon.tsx  UpToDateNotification.tsx  UpdateConsentModal.tsx
src/config/: app.config.ts  update.config.ts
src/data/: builtInPresets.ts
src/hooks/: index.ts  useAnalytics.ts  useCopyButton.tsx  useGitHubUpdater.ts  useMCPPresets.ts  (+7 more)
(+199 files in other folders)
